--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED PATHS ${LIB_DIR})
 find_package(X11 REQUIRED)
 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
+
 set(QVDB_BUILD_TESTS OFF CACHE BOOL "Disable qvdb tests")
 add_subdirectory(src/quick_vdb)
 
